Fix left-align of social icon row on home page to 11rem

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -12,7 +12,7 @@
 /* Pull the social/PDF icon row up under the hero subtitle */
 .hero + p {
   margin: -4.5em 0 4em 0;
-  margin-left: 10.25rem;
+  margin-left: 11rem;
 }
 
 .hero-image {
